[package]
name = "Hollowell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1.5"
goblin = "0.10.4"
memmap2 = "0.9.9"
ouroboros = "0.18.5"
plain = "0.2.3"
sha2 = "0.10.9"

[[bin]]
name = "divider"
path = "divider/divider.rs"

[[bin]]
name = "hexer"
path = "hexer/hexer.rs"

[workspace]
members = [
    "."
]
