[package]
name = "hollowell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1.5"
goblin = "0.10.4"
memmap2 = "0.9.9"
ouroboros = "0.18.5"
plain = "0.2.3"
sha2 = "0.10.9"

nix = { version = "0.30.1", features = ["fs", "process", "ptrace", "uio"] }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
once_cell = "1.21.3"

[[bin]]
name = "divider"
path = "divider.rs"

[[bin]]
name = "hexer"
path = "hexer.rs"

[lib]
name = "hollowell"
path = "lib/hollowell.rs"

[workspace]
members = [
    "."
]
