
[package]
name = "hollowchain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chain"
path = "chain.rs"

[dependencies]
anyhow = "1.0.100"
goblin = "0.10.4"
plain = "0.2.3"
nix = { version = "0.30.1", features = ["fs", "process", "ptrace", "uio"] }
console = "0.16.2"

hollowell = { path = ".." }


[workspace]
members = [
    "."
]
