
[package]
name = "hollowchain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chain"
path = "chain.rs"

[dependencies]
anyhow = "1.0.100"
goblin = "0.10.4"
plain = "0.2.3"
nix = { version = "0.30.1", features = ["fs", "process", "ptrace", "uio"] }
console = "0.16.2"

hollowell = { path = ".." }
libc = "0.2.178"
env_logger = "0.11.8"
once_cell = "1.21.3"
log = "0.4.29"
rand = "0.10.0-rc.5"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
ratatui = "0.29.0"
iced-x86 = "1.21.0"
ansi-to-tui = "7.0.0"


[workspace]
members = [
    "."
]
